do base code, hero and nav

--- a/index.html
+++ b/index.html
@@ -22,42 +22,48 @@
           <a href="#services" class="nav__link">services</a>
           <a href="#download" class="nav__link">download</a>
           <a href="#contact" class="nav__link">contact</a>
-          <button class="btn2" id="theme-toggle">Dark</button>
+          <button class="btn-2" id="theme-toggle">Dark</button>
         </div>
       </nav>
     </header>
 
     <main>
+      <!-- HOME -->
       <section class="home g-1">
         <div class="hero">
           <h1 class="hero__logo">Chill</h1>
           <div class="hero__sub">
             <p class="langitem" lang="en">
-              An unpleasant feeling of coldness in the atmosphere。
+              To relax means to calm the mind, the body, or both.
             </p>
             <p class="langitem" lang="jp">
-              大気、周囲、または身体の不快な冷たさ。とても気楽でリラックス。
+              心、体、またはその両方を落ち着かせることを意味します。
             </p>
           </div>
+          <button class="langitem btn-2" lang="en">Learn More</button>
+          <button class="langitem btn-2" lang="jp">もっと見る</button>
         </div>
         <!-- SVG here -->
-
+        <img src="src/img/creative.svg" class="home__img" alt="" />
         <i class="hero__scroll bx bx-chevron-down"></i>
+      </section>
+
+      <!-- ABOUT -->
+      <section class="section about" id="about">
+        <h1 class="section__title">About</h1>
       </section>
     </main>
 
     <div class="p-3">
-      <button class="btn2" id="lang-toggle">EN</button>
-
-      <p class="langitem" lang="en">hi</p>
-      <p class="langitem" lang="jp">はい</p>
+      <button class="btn-2" id="lang-toggle">EN</button>
     </div>
 
     <div class="p-3 g-2">
-      hola
+      <p class="langitem" lang="en">hello</p>
+      <p class="langitem" lang="jp">こんにちは</p>
     </div>
 
     <script src="https://unpkg.com/boxicons@2.1.1/dist/boxicons.js"></script>
-    <script src="src/index.js"></script>
+    <script src="src/js/index.js"></script>
   </body>
 </html>
