Complete website's homepage

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div class="nav__bar"></div>
         </div>
         <div class="nav__menu">
-          <a href="#about" class="nav__link">about</a>
+          <a href="#features" class="nav__link">features</a>
           <a href="#services" class="nav__link">services</a>
           <a href="#download" class="nav__link">download</a>
           <a href="#contact" class="nav__link">contact</a>
@@ -47,8 +47,8 @@
               </p>
             </div>
             <button class="btn pink" id="registerbtn">
-              <span class="langitem" lang="en">Learn More</span>
-              <span class="langitem" lang="jp">もっと見る</span>
+              <span class="langitem" lang="en">Register</span>
+              <span class="langitem" lang="jp">登録</span>
             </button>
           </div>
           <!-- SVG here -->
@@ -129,62 +129,57 @@
         </div>
       </section>
 
-      <!-- ABOUT -->
-      <section class="section about container" id="about">
-        <h1 class="section__title">About</h1>
-        <h3 class="about__sub langitem" lang="en"></h3>
-        <h3 class="about__sub langitem" lang="jp"></h3>
-        <div class="about__content grid">
-          <div class="about__card">
+      <!-- features -->
+      <section class="section features container" id="features">
+        <h1 class="section__title">features</h1>
+        <h3 class="features__sub langitem" lang="en"></h3>
+        <h3 class="features__sub langitem" lang="jp"></h3>
+        <div class="features__content grid">
+          <div class="features__card">
             <img src="src/img/collab.svg" alt="" />
             <h2 class="langitem" lang="en">Custom Design</h2>
             <h2 class="langitem" lang="jp">カスタムデザイン</h2>
 
             <p class="langitem" lang="en">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Praesentium consequuntur fugit doloribus porro provident soluta
-              asperiores? Officiis itaque quam illo.
             </p>
             <p class="langitem" lang="jp">
-              記提殺ッ通調チメミ売紹おれ康紙メ品小やり一葛んたさか実側ヤミ一第かご話明た芸防の供康げみあ女魚株す。書ひき位混ではち島特チヒタテ変展じン易9知稿決ス森高府マコ大経ウノサ児米こラぞや病困クよを補界づよ更症波贈家りっを。
+              書ひき位混ではち島特チヒタテ変展じン易9知稿決ス森高府マコ大経ウノサ児米こラぞや病困クよを補界づよ更症波贈家りっを。
             </p>
             <button class="btn pink">
               <span class="langitem" lang="en">Learn More</span>
               <span class="langitem" lang="jp">もっと見る</span>
             </button>
           </div>
-          <div class="about__card">
+          <div class="features__card">
             <img src="src/img/mobile.svg" alt="" />
             <h2 class="langitem" lang="en">Easy to use</h2>
             <h2 class="langitem" lang="jp">使いやすい</h2>
 
             <p class="langitem" lang="en">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus
-              nam minima distinctio, officia tempora vero velit facilis! Sunt,
-              deleniti temporibus.
+              nam
             </p>
             <p class="langitem" lang="jp">
-              記提殺ッ通調チメミ売紹おれ康紙メ品小やり一葛んたさか実側ヤミ一第かご話明た芸防の供康げみあ女魚株す。書ひき位混ではち島特チヒタテ変展じン易9知稿決ス森高府マコ大経ウノサ児米こラぞや病困クよを補界づよ更症波贈家りっを。
+              記提殺ッ通調チメミ売紹おれ康紙メ品小やり一葛んたさか実側ヤミ一第かご話明た防の供康げみあ女魚株す
             </p>
-            <button class="btn pink">
+            <button class="btn violet">
               <span class="langitem" lang="en">Learn More</span>
               <span class="langitem" lang="jp">もっと見る</span>
             </button>
           </div>
-          <div class="about__card">
+          <div class="features__card">
             <img src="src/img/writing2.svg" alt="" />
             <h2 class="langitem" lang="en">High Performance</h2>
             <h2 class="langitem" lang="jp">高性能</h2>
 
             <p class="langitem" lang="en">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus
-              nam minima distinctio, officia tempora vero velit facilis! Sunt,
-              deleniti temporibus.
+              Officia tempora vero velit facilis! Sunt, deleniti temporibus.
             </p>
             <p class="langitem" lang="jp">
-              記提殺ッ通調チメミ売紹おれ康紙メ品小やり一葛んたさか実側ヤミ一第かご話明た芸防の供康げみあ女魚株す。書ひき位混ではち島特チヒタテ変展じン易9知稿決ス森高府マコ大経ウノサ児米こラぞや病困クよを補界づよ更症波贈家りっを。
+              防の供康げみあ女魚株す。書ひき位混ではち島特チヒタテ変展じン易9知稿決ス森高府マコ大経ウノサ児米こラぞや病困クよを補界づよ更症波贈家りっを。
             </p>
-            <button class="btn pink">
+            <button class="btn orange">
               <span class="langitem" lang="en">Learn More</span>
               <span class="langitem" lang="jp">もっと見る</span>
             </button>
@@ -216,10 +211,28 @@
         </div>
       </section>
 
-      <!-- LETTERBOX -->
-      <section class="section download" id="letter">
-        <div class="letter__content container">
-          <h1 class="section__title">Letterbox</h1>
+      <!-- DOWNLOAD -->
+      <section class="section download" id="download">
+        <div class="download__content container">
+          <div class="download__data">
+            <h1 class="section__title">Download</h1>
+            <p class="langitem" lang="en">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae
+              asperiores veritatis temporibus sed distinctio
+            </p>
+            <p class="langitem" lang="jp">
+              務作メセ移養ヱマホヘ奪終か開敵ソト月72週フカ内台ねぜ協合セハキ宅質ハヱリマ子委ホキソネ付全ユクイ関満こ政
+            </p>
+            <div class="download__btns">
+              <button class="btn btn-flex pink">
+                <i class="bx bxl-play-store"></i>Google Play
+              </button>
+              <button class="btn btn-flex violet">
+                <i class="bx bxl-apple"></i>App Store
+              </button>
+            </div>
+          </div>
+          <img src="src/img/notif.svg" alt="" class="download__img" />
         </div>
       </section>
 
@@ -229,35 +242,46 @@
         <div class="contact__content">
           <div class="contact__gradient g-1"></div>
           <div class="contact__data">
-            <form action="" class="contact__form">
+            <div class="contact__text">
               <h1 class="section__title">Contact</h1>
+              <p class="langitem" lang="en">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui
+                sed molestiae officia id aut numquam culpa voluptate, error
+                eaque eos.
+              </p>
+              <p class="langitem" lang="jp">
+                務作メセ移養ヱマホヘ奪終か開敵ソト月72週フカ内台ねぜ協合セハキ宅質ハヱリマ子委ホキソネ付全ユクイ関満こ政立図ゆト陽図ラえり択勢ラフ校玉ぼ国別碁治トへス。
+              </p>
+            </div>
+            <form action="" class="contact__form">
               <input
-                type="email"
+                type="text"
                 class="langitem"
-                id="enname"
+                id="cenname"
                 lang="en"
-                placeholder="Your name.."
+                placeholder="Your name"
               />
               <input
-                type="email"
+                type="text"
                 class="langitem"
-                id="jpname"
+                id="cjpname"
                 lang="jp"
-                placeholder="君の名は。。"
+                placeholder="君に名は"
               />
+
               <input
-                type="email"
+                type="text"
                 class="langitem"
                 id="cenmail"
                 lang="en"
-                placeholder="Introduce your mail.."
+                placeholder="Your mail"
               />
               <input
-                type="email"
+                type="text"
                 class="langitem"
                 id="cjpmail"
                 lang="jp"
-                placeholder="君のメールは。。"
+                placeholder="君にメールは"
               />
 
               <input
@@ -274,7 +298,6 @@
                 lang="jp"
                 placeholder="内容を書いてください"
               />
-
               <input type="submit" class="langitem" lang="en" value="Submit" />
               <input type="submit" class="langitem" lang="jp" value="送信" />
             </form>
@@ -282,6 +305,57 @@
         </div>
       </section>
     </main>
+
+    <!--=============== FOOTER ===============-->
+    <footer class="footer section">
+      <div class="footer__container container grid">
+        <div class="footer__content">
+          <a href="#" class="footer__logo">Chill</a>
+        </div>
+
+        <div class="footer__content">
+          <h3 class="footer__title">Our Services</h3>
+          <ul class="footer__links">
+            <li><a href="#" class="footer__link">Pricing </a></li>
+            <li><a href="#" class="footer__link">Discounts</a></li>
+            <li><a href="#" class="footer__link">Report a bug</a></li>
+            <li><a href="#" class="footer__link">Terms of Service</a></li>
+          </ul>
+        </div>
+
+        <div class="footer__content">
+          <h3 class="footer__title">Our Company</h3>
+          <ul class="footer__links">
+            <li><a href="#" class="footer__link">Blog</a></li>
+            <li><a href="#" class="footer__link">Our mision</a></li>
+            <li><a href="#" class="footer__link">Get in touch</a></li>
+          </ul>
+        </div>
+
+        <div class="footer__content">
+          <h3 class="footer__title">Community</h3>
+          <ul class="footer__links">
+            <li><a href="#" class="footer__link">Support</a></li>
+            <li><a href="#" class="footer__link">Questions</a></li>
+            <li><a href="#" class="footer__link">Customer help</a></li>
+          </ul>
+        </div>
+
+        <div class="footer__social">
+          <a href="#" class="footer__social-link"
+            ><i class="bx bxl-facebook-circle"></i
+          ></a>
+          <a href="#" class="footer__social-link"
+            ><i class="bx bxl-twitter"></i
+          ></a>
+          <a href="#" class="footer__social-link"
+            ><i class="bx bxl-instagram-alt"></i
+          ></a>
+        </div>
+      </div>
+
+      <p class="footer__copy">&#169; Diego. All right reserved</p>
+    </footer>
 
     <script src="https://unpkg.com/boxicons@2.1.1/dist/boxicons.js"></script>
     <script src="src/js/index.js"></script>
